# qt-qml-tcp

./: .gitignore  README.md
client/: CMakeLists.txt  Main.qml  Main.qml.bak  backend.cpp  backend.h  client.cpp  client.h  main.cpp  tcpClient.cpp  tcpClient.h
cliver/: CMakeLists.txt  Main.qml  main.cpp  tcpServer.cpp  tcpServer.h
server/: CMakeLists.txt  Main.qml  backend.h  tcpServer.cpp  tcpServer.h
server.bak/: BetterButton.qml  LayoutSection.qml  backend.cpp  main.cpp  server.cpp  server.h
